syntax = "proto3";

import "../payment/payment.proto";
import "../task/task.proto";

message WorkerMessage {
  oneof message {
    Task task = 1;
    PaymentMessage payment = 2;
  }
}
